# kindwise-api-client

./: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  README_internal.md  environment.yml  manage.py  pyproject.toml
.github/workflows/: codeql.yml  stale.yml  test.yml
generate/: generate_sync.py
kindwise/: __init__.py  core.py  crop_health.py  insect.py  models.py  mushroom.py  plant.py  router.py  settings.py  snake.py
kindwise/async_api/: core.py  crop_health.py  insect.py  mushroom.py  plant.py
kindwise/resources/: views.crop_health.crop.json  views.crop_health.disease.json  views.insect.json  views.mushroom.json  views.plant.disease.json  views.plant.json  views.snake.json
kindwise/tests/: conftest.py  test_core.py  test_crop.py  test_insect.py  test_mushroom.py  test_plant.py  test_router.py  test_snake.py
kindwise/tests/async_api/: test_core.py  test_crop.py  test_insect.py  test_mushroom.py  test_plant.py
test_project/: .env.example  README.md  example_async.py  example_sync.py  requirements.txt
