[tool.poetry]
name = "kindwise"
version = "0.1.0"
description = "python sdk toolkit for integrating kindwise API"
authors = ["Simon Plhak <simon.plhak@flowerchecker.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/flowerchecker/kindwise-sdk"
packages = [
    { include = "kindwise"},
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
bump2version = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
