[tool.poetry]
name = "kindwise-api-client"
version = "0.8.0"
description = "Python SDK toolkit for integrating Kindwise API"
authors = ["Simon Plhak <simon.plhak@flowerchecker.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flowerchecker/kindwise"
build = "generate/generate_sync.py"
packages = [
    { include = "kindwise"},
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "*"
pillow = "*"
httpx = "*"
torch = { version = "2.7.0", optional = true }
huggingface-hub = { version = "^0.35.3", optional = true }
numpy = { version = "2.2.6", optional = true }
torchvision = { version = "0.22.0", optional = true }
aiofiles = { version = "^25.1.0", optional = true }

[tool.poetry.extras]
router = [
    "torch",
    "huggingface-hub",
    "numpy",
    "torchvision",
]
async = [
    "aiofiles"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
bump2version = "^1.0.1"
unasync = "^0.6.0"
respx = "^0.22.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
requests-mock = "^1.11.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core", "unasync"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
